--- a/index2.html
+++ b/index2.html
@@ -13,16 +13,21 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     </head>
     <body>
-        <h1>CRUD <i class="fab fa-php fa-lg  "></i></h1>
-        <div class="form-group">
-          <label for="">Nome</label>
-          <input type="text" class="form-control" name="nome" id="form-nome" aria-describedby="helpId" placeholder="">
-          <small id="helpId" class="form-text text-muted">Como prefere ser chamadx?</small>
-          <label for="">Nome</label>
-          <input type="text" class="form-control" name="email" id="form-email" aria-describedby="helpId" placeholder="">
-          <small id="helpId" class="form-text text-muted">Qual o seu melhor e-mail para contato?</small>
-        </div>       
-
+        <?php require_once 'process.php'; ?>
+        <div class="row justify-content-center">
+            <h1>CRUD <i class="fab fa-php fa-lg  "></i></h1>
+            <form action="process.php" method="POST">
+                <div class="form-group">
+                <label for="">Nome</label>
+                <input type="text" class="form-control" name="nome" id="form-nome" aria-describedby="helpId" placeholder="">
+                <small id="helpId" class="form-text text-muted">Como prefere ser chamadx?</small>
+                <label for="">E-mail</label>
+                <input type="email" class="form-control" name="email" id="form-email" aria-describedby="helpId" placeholder="">
+                <small id="helpId" class="form-text text-muted">Qual o seu melhor e-mail para contato?</small>
+                <button type="submit" class="btn btn-primary" name="salvar">Enviar</button>
+                </div>
+            </form>       
+        </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
